Removing top margin causing unnecessary above the .log-header on the monitoring page. Adding class to adjust spacing when ui-select is shown Fixes https://github.com/openshift/origin-web-console/issues/1233

--- a/app/styles/_log.less
+++ b/app/styles/_log.less
@@ -3,7 +3,6 @@
 }
 .log-header {
   margin-bottom: 3px;
-  margin-top: @grid-gutter-width / 2;
   label {
     margin-bottom: 0;
   }
@@ -48,6 +47,14 @@
       .pull-right();
       margin-left: 5px;
     }
+  }
+}
+.log-viewer-select {
+  .log-header {
+    margin-bottom: 8px;
+  }
+  .log-actions {
+    margin-top: 5px;
   }
 }
 .log-size-warning {
